# sshmcp

./: .coverage  .coveragerc  .env.example  .gitignore  Makefile  README.md  pyproject.toml  sshagent.conf.example  test_show.py
src/ssh_mcp_agent/: agent.py  config.py  hosts.py  server.py
src/ssh_mcp_agent/llm/: client.py
src/ssh_mcp_agent/tools/: ssh.py
src/ssh_mcp_agent/ui/: app.py  hosts_manager.py
src/ssh_mcp_agent/ui/static/: index.html
tests/: test_agent.py  test_auth_ws.py  test_config.py  test_coverage_boost.py  test_db_hosts.py  test_host_management.py  test_llm_client.py  test_server.py  test_server_main.py  test_ssh_tools.py  test_ui.py
