[project]
name = "ssh-mcp-agent"
version = "0.1.0"
description = "An MCP Agent with SSH capabilities using Ollama"
authors = [
    { name = "Mark LaPointe", email = "mark@cloudbsd.org" }
]
dependencies = [
    "mcp>=1.2.1",
    "paramiko>=3.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.4.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ssh-mcp-server = "ssh_mcp_agent.server:main"
ssh-mcp-agent = "ssh_mcp_agent.agent:main"
ssh-mcp-ui = "ssh_mcp_agent.ui.app:main"
